Project_3/src/objects/Diagnosis_Search_Junc__c.object
<CustomObject>
    <fields>
        <fullName>Chosen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chosen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <referenceTo>Diagnosis__c</referenceTo>
        <relationshipLabel>Diagnosis-Search-Juncs</relationshipLabel>
        <relationshipName>Diagnosis_Search_Juncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <label>Likelihood</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Search__c</fullName>
        <label>Search</label>
        <referenceTo>Search__c</referenceTo>
        <relationshipLabel>Diagnosis-Search-Juncs</relationshipLabel>
        <relationshipName>Diagnosis_Search_Juncs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Diagnosis-Search-Junc</label>
    <nameField>
        <displayFormat>DSJ-{0}</displayFormat>
        <label>Diagnosis-Search-Junc Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnosis-Search-Juncs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>